style fixes to fixed hero on mobile

--- a/assets/scss/global/content/_posts.scss
+++ b/assets/scss/global/content/_posts.scss
@@ -15,109 +15,106 @@
 // background-image: url("img1.png"), url("img2.png");
 // background-attachment: scroll, fixed;
 
-header{
-  position: fixed;
-  top: 44px;
-  left: 0;
-  width: 100%;
-  height: 520px;
-  text-align: center;
-  z-index: 0;
-  background-size: initial;
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-attachment: fixed;
-  //Vingette
-  &:after{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.5);
-    top: 0;
-    right: 0;
-    bottom: 0;
+// Posts
+.post{
+  header{
+    position: fixed;
+    top: 44px;
     left: 0;
-    z-index: -1;
-    background: radial-gradient(rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.7));
+    width: 100%;
+    height: 520px;
+    text-align: center;
+    z-index: 0;
+    background-size: initial;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-attachment: fixed;
+    //Vingette
+    &:after{
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+      background: radial-gradient(rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.7));
+    }
+
+    // Wrapper for positioning head and sub-head, since <header> is use for bkg
+    .title {
+      max-width: 768px;
+      //margin: 15% auto 0 auto; //without slant
+      margin: 10% auto 0 auto; //with slant
+      text-align: left;
+      padding: $gutter-size;
+    }
+
+    h1, h2{
+      text-shadow: 0px 0px 12px  rgba(invert($body-headline-color), 0.5);
+      a{
+        @include transition(all .25s ease-in-out);
+        &:hover{
+          text-shadow: 0px 0px 5px rgba(0,0,0,0.2);
+        }
+      }
+    }
+    .meta{
+      font-family: $body-font;
+      font-weight: normal;
+
+      &:before{
+        content: "";
+      }
+      &:after{
+        content: "";
+      }
+    }
+
+    p{
+
+    }
   }
 
-  // Wrapper for positioning head and sub-head, since <header> is use for bkg
-  .title {
-    max-width: 768px;
-    //margin: 15% auto 0 auto; //without slant
-    margin: 10% auto 0 auto; //with slant
-    text-align: left;
-    padding: $gutter-size;
-  }
-
-  h1, h2{
-    text-shadow: 0px 0px 12px  rgba(invert($body-headline-color), 0.5);
-    a{
-      @include transition(all .25s ease-in-out);
-      &:hover{
-        text-shadow: 0px 0px 5px rgba(0,0,0,0.2);
+  // Main Content
+  .article-content{
+    position: relative;
+    width: 100%;
+    height:100%;
+    margin-top: 520px;
+    padding-top:44px;
+    background-color: white;
+    z-index: 1;
+    //Slanted Crop
+    &:before{
+      content: "";
+      position: absolute;
+      width: 125%;
+      height: 50%;
+      background: white;
+      right: -6,5em;
+      top: -6.5em;
+      z-index: -1;
+      -webkit-transform: rotate(-8deg);
+      -moz-transform: rotate(-8deg);
+      -ms-transform: rotate(-8deg);
+      -o-transform: rotate(-8deg);
+      transform: rotate(-8deg);
+    }
+    .paragraph-measure{
+      max-width: 768px;
+      margin: 0 auto;
+    }
+    p {
+      letter-spacing: .013rem;
+      a{
+        font-weight: bold;
       }
     }
   }
-  .meta{
-    font-family: $body-font;
-    font-weight: normal;
-
-    &:before{
-      content: "";
-    }
-    &:after{
-      content: "";
-    }
-  }
-
-  p{
-
-  }
-}
-
-// Main Content
-.article-content{
-  position: relative;
-  width: 100%;
-  height:100%;
-  margin-top: 520px;
-  padding-top:44px;
-  background-color: white;
-  z-index: 1;
-  //Slanted Crop
-  &:before{
-    content: "";
-    position: absolute;
-    width: 125%;
-    height: 50%;
-    background: white;
-    right: -5em;
-    top: -6em;
-    z-index: -1;
-    -webkit-transform: rotate(-8deg);
-    -moz-transform: rotate(-8deg);
-    -ms-transform: rotate(-8deg);
-    -o-transform: rotate(-8deg);
-    transform: rotate(-8deg);
-  }
-  .paragraph-measure{
-    max-width: 768px;
-    margin: 0 auto;
-  }
-  p {
-    letter-spacing: .013rem;
-    a{
-      font-weight: bold;
-    }
-  }
-}
-
-// Syntax
-.highlight{
-  margin: ($baseline-height * 1rem) auto;
-  box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
 }
 
 // ----------------------------------------------
@@ -167,6 +164,14 @@ header{
     }
   }
 }
+
+
+// Syntax
+.highlight{
+  margin: ($baseline-height * 1rem) auto;
+  box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
+}
+
 
 .seperator {
 	text-align: center;
